# qubes-zathura-bookmark

./: .gitignore  Cargo.toml  LICENSE.md  README.md  zath_bmark_debug.sh  zath_bmark_vm_build.sh
src/: client.rs  conf.rs  main.rs  parser.rs  qrexec.rs  server.rs  shared_consts.rs  shared_fn.rs  test.rs
